syntax = "proto3";

package gw.blog;

option go_package = "gw/proto/blog";

message SearchBlogsRequest {
  string keyword = 1;
}

message SearchBlogsResponse {
  repeated markdown markdowns = 1;
}

message markdown {
  string markdownPath = 1;
  string title = 2;
  string place = 3;
  string description = 4;
  repeated string types = 5;
  highlight highlight = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message highlight {
  repeated string content = 1;
  repeated string title = 2;
}
